feat: support springboot3.x